Fix deserialization of SpannerPartition